# VLM-Police-Patrol

./: .gitignore  .gitmodules  README.md
docs/: benchmarks.md  system_benchmark_watchdog_analysis.md  technical.md  vlm_inference_benchmark.md
pico_firware/: .gitignore
pico_firware/mecanum_base/: CMakeLists.txt  README.md  mecanum_base.cpp
sh/: amcl.sh  bringup.sh  camera.sh  flask.sh  llamacpp.sh  master.sh  oled.sh  suspect_localize.sh  suspect_matcher.sh  yolo.sh
src/dashboard_flask/: README.md  flask.sh  launch_dashboard.sh  package.xml  setup.cfg  setup.py
src/dashboard_flask/dashboard_flask/: flask_node.py
src/dashboard_flask/dashboard_flask/templates/: index.html
src/oled_status/: README.md  package.xml  setup.cfg  setup.py
src/oled_status/launch/: oled_status.launch.py
src/oled_status/oled_status/: oled_status_node.py
src/police_patrol_bot/: CMakeLists.txt  README.md  package.xml
src/police_patrol_bot/config/: amcl.yaml  ekf.yaml
src/police_patrol_bot/launch/: amcl.launch.py  bringup.launch.py  camera.launch.py
src/police_patrol_bot/maps/: map.pgm  map.yaml
src/police_patrol_bot/scripts/: wheel_joint_state_publisher.py
src/police_patrol_bot_description/: CMakeLists.txt  README.md  package.xml
src/police_patrol_bot_description/config/: display.rviz
src/police_patrol_bot_description/launch/: display.launch.py
src/police_patrol_bot_description/urdf/: mecanum_robot.urdf.xacro
src/suspect_matcher/: README.md  package.xml  setup.cfg  setup.py
src/suspect_matcher/config/: system_prompt.txt
src/suspect_matcher/launch/: compare.launch.py
src/suspect_matcher/suspect_matcher/: attribute_compare_from_files_node.py  suspect_localizer_node.py  yolo_detect_node.py  yoloworld_detect_node.py
