<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>police_patrol_bot_description</name>
  <version>0.1.0</version>
  <description>
    URDF/description and RViz visualization for the police patrol mecanum robot.
    Provides the robot model (xacro), the RViz display config and a display
    launch for previewing the model. Operational bringup (micro_ros_agent, EKF)
    lives in the police_patrol_bot package.
  </description>

  <maintainer email="brian@braintreex.com">Brian</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
